--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "exports": {
         ".": {
             "types": "./dist/index.d.ts",
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.cjs"
+            "import": "./dist/index.mjs"
         }
     },
-    "main": "./dist/index.cjs",
+    "main": "./dist/index.mjs",
     "module": "./dist/index.mjs",
     "types": "./dist/index.d.ts",
     "typesVersions": {
@@ -65,5 +64,10 @@
         "ts-node": "^10.9.1",
         "typescript": "^4.8.3",
         "unbuild": "^0.8.11"
+    },
+    "dependencies": {
+        "@pcrab/pblive-lib": "^0.0.2",
+        "chalk": "^5.0.1",
+        "commander": "^9.4.0"
     }
 }
