--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,10 @@
         "**/node_modules": false
     },
     "cSpell.words": [
-        "danmu"
+        "bilibili",
+        "danmu",
+        "danmus",
+        "pblive",
+        "roomid"
     ]
 }
