--- a/package.json
+++ b/package.json
@@ -48,26 +48,26 @@
         "test": "jest"
     },
     "devDependencies": {
-        "@types/jest": "^29.0.3",
-        "@types/node": "^18.7.18",
-        "@typescript-eslint/eslint-plugin": "^5.37.0",
-        "@typescript-eslint/parser": "^5.37.0",
-        "eslint": "^8.23.1",
+        "@types/jest": "^29.1.2",
+        "@types/node": "^18.8.3",
+        "@typescript-eslint/eslint-plugin": "^5.39.0",
+        "@typescript-eslint/parser": "^5.39.0",
+        "eslint": "^8.25.0",
         "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": ">=2.25.3 <3.0.0",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-prettier": "^4.2.1",
         "husky": "^8.0.1",
-        "jest": "^29.0.3",
-        "jest-environment-jsdom": "^29.0.3",
+        "jest": "^29.1.2",
+        "jest-environment-jsdom": "^29.1.2",
         "prettier": "^2.7.1",
-        "ts-jest": "^29.0.1",
+        "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
-        "typescript": "^4.8.3",
+        "typescript": "^4.8.4",
         "unbuild": "^0.8.11"
     },
     "dependencies": {
-        "@pcrab/pblive-lib": "^0.0.2",
-        "chalk": "^5.0.1",
-        "commander": "^9.4.0"
+        "@pcrab/pblive-lib": "^0.0.5",
+        "chalk": "^5.1.0",
+        "commander": "^9.4.1"
     }
 }
